# pika

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  events.rs  main.rs
src/config/: mod.rs  settings.rs  theme.rs
src/editor/: clipboard.rs  cursor.rs  document.rs  history.rs  mod.rs  syntax.rs
src/files/: drop_handler.rs  mod.rs  operations.rs  tree.rs  watcher.rs
src/input/: actions.rs  handler.rs  keymap.rs  mod.rs
src/lsp/: capabilities.rs  client.rs  mod.rs  registry.rs  types.rs
src/ui/: buffer.rs  command_palette.rs  completion.rs  confirm_dialog.rs  csv_view.rs  editor.rs  mod.rs  project_search.rs  shortcuts_help.rs  sidebar.rs  status_bar.rs  tab_bar.rs
