[package]
name = "pika-ide"
version = "0.1.4"
edition = "2021"
description = "A fast, keyboard-driven terminal IDE with syntax highlighting and LSP support"
license = "MIT"
repository = "https://github.com/stefanodecillis/pika"
homepage = "https://github.com/stefanodecillis/pika"
readme = "README.md"
keywords = ["terminal", "ide", "editor", "tui", "lsp"]
categories = ["command-line-utilities", "development-tools", "text-editors"]

[[bin]]
name = "pika"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ropey = "1.6"
tokio = { version = "1", features = ["full"] }
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
fuzzy-matcher = "0.3"
arboard = "3"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
lsp-types = "0.97"
trash = "5"
dirs = "5"
log = "0.4"
anyhow = "1"
unicode-width = "0.2"
unicode-segmentation = "1"
csv = "1"

[dev-dependencies]
tempfile = "3"
